
0.9.7i Dec 10, 2003
 * added slapt-get source to example slapt-getrc
 * updated source creation script, runs PACKAGESTXT and MD5 on all now
 * added --disable-dep-check to skip the dependency checking
 * added support for ROOT enviroment variable for location of packages logs 
   overriding /var/log/packages ("Keary Griffin" <keary.griffin@unwiredappeal.com>)

0.9.7h Dec 08, 2003
 * updated FAQ
 * updated example dropline exclude regex (Francesco Gigli <jaramir@aruba.it>)
 * initialize global_config->exclude_list if EXCLUDE commented out (Francesco Gigli <jaramir@aruba.it>)
 * updated FAQ
 * updated example.slapt-getrc
 * Polish translation updates by Paul Blazejowski <paulb at blazebox dot homeip dot net>
 * updated slack.it source entry in example.slapt-getrc
 * updated FAQ
 * updated example.slaptgetrc

0.9.7g Nov 23, 2003
 * updated break_down_pkg_version and cmp_pkg_versions for improved version checking

0.9.7f Nov 23, 2003
 * added staticinstall, withlibslaptinstall, staticpkg, and withlibslaptpkg make targets
 * updated error handling, cleaned up exits
 * fixed bug in cmp_pkg_versions when checking build versions, returning opposite than expected
 * updated Makefile
 * removed download_data callback and all callers passing it along

0.9.7e Nov 21, 2003
 * added debugging in transaction functions
 * updated cmp_pkg_versions, changed integer cmp to str cmp for version parts,
   fixing bug with versions containing letters in version parts, such as 0.9.7c.
 * fixed another occurrance of URL malformed, cmp_pkg_versions called with wrong
   pkg struct for dep in --upgrade
 * moved src/action.c:pkg_action_update to src/package.c:update_pkg_cache (libslapt)
 * download_data now gets passed callback function, as arg from download_pkg
   and get_mirror_data_from_source (libslapt)
 * makefile updates for libslapt
   added withlibslapt target to build slapt-get binary linked to libslapt
 * moved usage and version_info functions to action.c (libslapt)
